--- a/styles/styles.css
+++ b/styles/styles.css
@@ -96,7 +96,7 @@ ul {
 }
 
 .nav {
-    background-color: #ffffff;
+    background-color: #777777;
     overflow: visible;
     display: flex;
     flex-direction: column;
@@ -108,9 +108,7 @@ ul {
     margin: 20px 0px 0px 0px;
 }
 
-nav a {
-    color: #323e48;
-}
+
 
 .main {
     display: flex;
@@ -405,7 +403,7 @@ input:focus {
     }
 
     .nav {
-        background-color: #ffffff;
+        background-color: #777777;
         flex-direction: row;
         justify-content: center;
         align-items: center;
@@ -485,7 +483,7 @@ input:focus {
     }
 
     .nav {
-        background-color: #ffffff;
+        background-color: #777777;
         flex-direction: row;
         justify-content: center;
         align-items: center;
@@ -566,7 +564,7 @@ input:focus {
     }
 
     .nav {
-        background-color: #ffffff;
+        background-color: #777777;
         flex-direction: row;
         justify-content: center;
         align-items: center;
