--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,2 +1,5 @@
-$color-principal: #ff0000;
+$color-primario: #ff0000;
 $color-secundario: #323e48;
+$color-terciario: #a2a9ad;
+$color-blanco: #ffffff;
+$color-negro: #000000;
