--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,7 +2,7 @@
 @import "maps";
 
 @import "extend";
-@import "mixins";
+@import "mixin";
 
 @import "reset";
 @import "media-queries";
@@ -14,3 +14,4 @@
 @import "novedades";
 @import "tienda";
 @import "contacto";
+@import "pruebas";
