--- a/scss/_extend.scss
+++ b/scss/_extend.scss
@@ -1,10 +1,39 @@
 .boton {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
+    height: 40px;
+    width: 150px;
     background-color: map-get($colores, color-primario);
-    color: #ffffff;
+    color: map-get($colores, color-blanco);
+    border-radius: 5px;
+    transition: all 1s;
+    border: 1px solid map-get($colores, color-primario);        
     &:hover {
         border: 1px solid map-get($colores, color-primario);
+        transform: scale(110%);
+    }
+}
+
+.boton--ver-mas {
+    @extend .boton;
+    background-color: map-get($colores, color-secundario);
+    color:map-get($colores, color-blanco);
+    &:hover {
+        border: 1px solid map-get($colores, color-secundario);
+        background-color: map-get($colores, color-blanco);
+        color: map-get($colores, color-secundario);
+        transform: scale(110%);
+    }
+}
+
+.boton--reset {
+    @extend .boton;
+    background-color: map-get($colores, color-terciario);
+    color: map-get($colores, color-blanco);
+    border: 1px solid map-get($colores, color-terciario);
+    margin: 0 0 0 20px;
+    &:hover {
+        border: 1px solid map-get($colores, color-terciario);
         transform: scale(110%);
     }
 }
