--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,8 +1,59 @@
-.footer {
-    background-color: #323e48;
-    height: 150px;
+.footer__tienda {
     display: flex;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
-    grid-area: footer;
+    background-color: $color-secundario;
+    width: auto;
+    height: 150px;
+    padding: 0 50px 0 50px;
+    grid-area: footer__tienda;
+}
+.footer__0 {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: $color-secundario;
+    width: auto;
+    height: 150px;
+    padding: 0 50px 0 50px;
+}
+
+.footer__1 {
+    width: auto;
+}
+
+.footer__2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+}
+
+.footer__logo {
+    width: auto;
+    
+
+}
+
+.footer__caja2 {
+    align-items: center;
+    justify-content: center;
+    background-color: $color-negro;
+    height: 40px;
+    p {
+        color: $color-blanco;
+        margin: 0;
+        font-size: 10px;
+        text-align: center;
+        padding-top: 10px;
+    }
+}
+
+.footer__box {
+    width: 100px;
 }
