--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -108,6 +108,9 @@
         margin: 20px;
         padding: 20px;
         box-shadow: 0px 0px 15px #bebebe;
+        a {
+            font-size: 16px;
+        }
     }
 }
 
