--- a/scss/_extend.scss
+++ b/scss/_extend.scss
@@ -18,6 +18,7 @@
     @extend .boton;
     background-color: map-get($colores, color-secundario);
     color:map-get($colores, color-blanco);
+    border: 1px solid map-get($colores, color-secundario);
     &:hover {
         border: 1px solid map-get($colores, color-secundario);
         background-color: map-get($colores, color-blanco);
