--- a/scss/_media-queries.scss
+++ b/scss/_media-queries.scss
@@ -1,4 +1,4 @@
-@media (min-width: 480px) and (max-width: 576px) {
+/*@media (min-width: 480px) and (max-width: 576px) {
     .header {
         position: relative;
         display: flex;
@@ -192,4 +192,4 @@
         flex-direction: column;
         align-items: center;
     }
-}
+}*/
