--- a/scss/_novedades.scss
+++ b/scss/_novedades.scss
@@ -1,11 +1,34 @@
 .novedades__main {
     display: flex;
-    flex-direction: column;
     flex-wrap: wrap;
+    flex-direction: row;
     justify-content: center;
-    align-items: center;
-    width: auto;
-    margin: 0px 0px 50px 0px;
+    width: 100%;
+    margin: 50px 0 50px 0;
+
+    .novedades__columna1 {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        width: 1fr;
+        h2 {
+            font-size: 32px;
+            color: $color-secundario;
+        }
+        h3 {
+            font-size: 24px;
+            font-weight: 400;
+            color: $color-terciario;
+        }
+    }
+
+    .novedades__columna2 {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        width: 0.3fr;
+    }
+
     .novedades__secciones {
         display: flex;
         flex-direction: row;
@@ -13,16 +36,21 @@
         justify-content: center;
         align-items: baseline;
         width: auto;
+        h1 {
+            font-size: 48px;
+            color: $color-primario;
+        }
     }
+
     .novedades-box {
         display: flex;
         flex-direction: column;
-        height: 100%;
-        width: 1000px;
+        width: 460px;
         margin: 20px 20px 20px 20px;
         padding: 20px;
         border-bottom: 3px dotted #323e48;
     }
+
     .novedades-box--foto {
         display: flex;
         flex-direction: row;
@@ -30,6 +58,7 @@
         margin: 0px 50px 0px 0px;
         padding: 20px;
     }
+
     .novedades-box--titulo {
         display: flex;
         align-items: center;
@@ -38,5 +67,60 @@
         width: 100%;
         margin: 20px 0px 0px 0px;
     }
-    
+
 }
+/*.novedades__main {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+
+    .novedades__columna1 {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        width: 0.75fr;
+        height: 100%;
+    }
+
+    .novedades__columna2 {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        width: 0.25fr;
+        height: 100%;
+    }
+
+    .novedades__secciones {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: baseline;
+        width: auto;
+    }
+
+    .novedades-box {
+        display: flex;
+        flex-direction: column;
+        margin: 20px 20px 20px 20px;
+        padding: 20px;
+    }
+
+    .novedades-box--foto {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin: 0px 50px 0px 0px;
+        padding: 20px;
+    }
+
+    .novedades-box--titulo {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100px;
+        width: 100%;
+        margin: 20px 0px 0px 0px;
+    }
+
+}*/
