--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,6 +17,7 @@
 .boton--ver-mas {
   background-color: #323e48;
   color: #ffffff;
+  border: 1px solid #323e48;
 }
 .boton--ver-mas:hover {
   border: 1px solid #323e48;
@@ -118,158 +119,201 @@
   margin: 0;
 }
 
-@media (min-width: 480px) and (max-width: 576px) {
-  .header {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px 0px 10px 0px;
-  }
-  a {
-    font-size: 11px;
-  }
-  .section-card-box {
-    background-color: #ffffff;
-    height: auto;
-    width: 360px;
-    border-radius: 5px;
-    display: inline-block;
-    margin: 20px;
-    padding: 20px;
-    box-shadow: 0px 0px 15px #bebebe;
-  }
-  .footer {
-    margin: 20px 0px 20px 0px;
-    flex-direction: column;
-    align-items: center;
-    grid-area: footer;
-  }
+/*@media (min-width: 480px) and (max-width: 576px) {
+    .header {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 20px 0px 10px 0px;
+    }
+
+    a {
+        font-size: 11px;
+    }
+
+    .section-card-box {
+        background-color: #ffffff;
+        height: auto;
+        width: 360px;
+        border-radius: 5px;
+        display: inline-block;
+        margin: 20px;
+        padding: 20px;
+        box-shadow: 0px 0px 15px #bebebe;
+
+    }
+
+    .footer {
+        margin: 20px 0px 20px 0px;
+        flex-direction: column;
+        align-items: center;
+        grid-area: footer;
+    }
+
+
 }
+
 @media (max-width: 479px) {
-  .header {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px 0px 10px 0px;
-  }
-  a {
-    font-size: 11px;
-  }
-  .section-card-box {
-    background-color: #ffffff;
-    height: auto;
-    width: 360px;
-    border-radius: 5px;
-    display: inline-block;
-    margin: 20px;
-    padding: 20px;
-    box-shadow: 0px 0px 15px #bebebe;
-  }
-  .footer {
-    margin: 20px 0px 20px 0px;
-    flex-direction: column;
-    align-items: center;
-    grid-area: footer;
-  }
-  .grid-container {
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: 120px auto auto auto auto auto 150px;
-    grid-template-areas: "header header" "main main" "nav nav" "section-1 section-1" "aside aside" "section-2 section-2" "footer footer";
-    grid-gap: 10px;
-  }
-  .banner {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-  }
-  .nav {
-    background-color: #777777;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    grid-area: nav;
-    padding: 20px;
-    margin: 0px;
-  }
-  .section-1 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .section-2 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+    .header {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 20px 0px 10px 0px;
+    }
+
+    a {
+        font-size: 11px;
+    }
+
+    .section-card-box {
+        background-color: #ffffff;
+        height: auto;
+        width: 360px;
+        border-radius: 5px;
+        display: inline-block;
+        margin: 20px;
+        padding: 20px;
+        box-shadow: 0px 0px 15px #bebebe;
+
+    }
+
+    .footer {
+        margin: 20px 0px 20px 0px;
+        flex-direction: column;
+        align-items: center;
+        grid-area: footer;
+    }
+
+    .grid-container {
+        display: grid;
+        grid-template-columns: auto auto;
+        grid-template-rows: 120px auto auto auto auto auto 150px;
+        grid-template-areas:
+            "header header"
+            "main main"
+            "nav nav"
+            "section-1 section-1"
+            "aside aside"
+            "section-2 section-2"
+            "footer footer"
+        ;
+        grid-gap: 10px;
+    }
+
+    .banner {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+    }
+
+    .nav {
+        background-color: #777777;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        grid-area: nav;
+        padding: 20px;
+        margin: 0px;
+    }
+
+    .section-1 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .section-2 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
 }
+
 @media (min-width: 576px) and (max-width: 768px) {
-  .header {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px 0px 10px 0px;
-  }
-  a {
-    font-size: 15px;
-  }
-  .section-card-box {
-    background-color: #ffffff;
-    height: auto;
-    width: 417px;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    margin: 20px;
-    padding: 20px;
-    box-shadow: 0px 0px 15px #bebebe;
-  }
-  .footer {
-    margin: 20px 0px 20px 0px;
-    flex-direction: column;
-    align-items: center;
-    grid-area: footer;
-  }
-  .grid-container {
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: 120px auto auto auto auto auto 150px;
-    grid-template-areas: "header header" "main main" "nav nav" "section-1 section-1" "aside aside" "section-2 section-2" "footer footer";
-    grid-gap: 10px;
-  }
-  .banner {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-  }
-  .nav {
-    background-color: #777777;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    grid-area: nav;
-    padding: 20px;
-    margin: 0px;
-    color: #323e48;
-  }
-  .section-1 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .section-2 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-}
+    .header {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 20px 0px 10px 0px;
+    }
+
+    a {
+        font-size: 15px;
+    }
+
+    .section-card-box {
+        background-color: #ffffff;
+        height: auto;
+        width: 417px;
+        border-radius: 5px;
+        display: flex;
+        flex-direction: column;
+        margin: 20px;
+        padding: 20px;
+        box-shadow: 0px 0px 15px #bebebe;
+
+    }
+
+    .footer {
+        margin: 20px 0px 20px 0px;
+        flex-direction: column;
+        align-items: center;
+        grid-area: footer;
+    }
+
+    .grid-container {
+        display: grid;
+        grid-template-columns: auto auto;
+        grid-template-rows: 120px auto auto auto auto auto 150px;
+        grid-template-areas:
+            "header header"
+            "main main"
+            "nav nav"
+            "section-1 section-1"
+            "aside aside"
+            "section-2 section-2"
+            "footer footer"
+        ;
+        grid-gap: 10px;
+    }
+
+    .banner {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+    }
+
+    .nav {
+        background-color: #777777;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        grid-area: nav;
+        padding: 20px;
+        margin: 0px;
+        color: #323e48;
+    }
+
+    .section-1 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .section-2 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}*/
 a {
   font-family: Oswald;
   font-size: 22px;
@@ -468,6 +512,9 @@ input:focus {
   padding: 20px;
   box-shadow: 0px 0px 15px #bebebe;
 }
+.home__novedades .home__novedades--cards a {
+  font-size: 16px;
+}
 
 .home__clientes {
   display: flex;
@@ -614,12 +661,32 @@ input:focus {
 
 .novedades__main {
   display: flex;
-  flex-direction: column;
   flex-wrap: wrap;
+  flex-direction: row;
   justify-content: center;
-  align-items: center;
-  width: auto;
-  margin: 0px 0px 50px 0px;
+  width: 100%;
+  margin: 50px 0 50px 0;
+}
+.novedades__main .novedades__columna1 {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width: 1fr;
+}
+.novedades__main .novedades__columna1 h2 {
+  font-size: 32px;
+  color: #323e48;
+}
+.novedades__main .novedades__columna1 h3 {
+  font-size: 24px;
+  font-weight: 400;
+  color: #a2a9ad;
+}
+.novedades__main .novedades__columna2 {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width: 0.3fr;
 }
 .novedades__main .novedades__secciones {
   display: flex;
@@ -629,11 +696,14 @@ input:focus {
   align-items: baseline;
   width: auto;
 }
+.novedades__main .novedades__secciones h1 {
+  font-size: 48px;
+  color: #ff0000;
+}
 .novedades__main .novedades-box {
   display: flex;
   flex-direction: column;
-  height: 100%;
-  width: 1000px;
+  width: 460px;
   margin: 20px 20px 20px 20px;
   padding: 20px;
   border-bottom: 3px dotted #323e48;
@@ -654,6 +724,61 @@ input:focus {
   margin: 20px 0px 0px 0px;
 }
 
+/*.novedades__main {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+
+    .novedades__columna1 {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        width: 0.75fr;
+        height: 100%;
+    }
+
+    .novedades__columna2 {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        width: 0.25fr;
+        height: 100%;
+    }
+
+    .novedades__secciones {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: baseline;
+        width: auto;
+    }
+
+    .novedades-box {
+        display: flex;
+        flex-direction: column;
+        margin: 20px 20px 20px 20px;
+        padding: 20px;
+    }
+
+    .novedades-box--foto {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin: 0px 50px 0px 0px;
+        padding: 20px;
+    }
+
+    .novedades-box--titulo {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100px;
+        width: 100%;
+        margin: 20px 0px 0px 0px;
+    }
+
+}*/
 .grid-container {
   display: grid;
   height: 100vh;
@@ -673,6 +798,7 @@ input:focus {
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
+  width: 100%;
   grid-area: main;
 }
 
@@ -924,5 +1050,64 @@ input:focus {
   width: 1100px;
   margin: 0px 0px 100px 0px;
 }
+
+/*.novedades__main {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+
+    .novedades__columna1 {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        width: 1fr;
+    }
+
+    .novedades__columna2 {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        width: 0.3fr;
+    }
+
+    .novedades__secciones {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: baseline;
+        width: auto;
+    }
+
+    .novedades-box {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        width: 460px;
+        margin: 20px 20px 20px 20px;
+        padding: 20px;
+        border-bottom: 3px dotted #323e48;
+    }
+
+    .novedades-box--foto {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin: 0px 50px 0px 0px;
+        padding: 20px;
+    }
+
+    .novedades-box--titulo {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100px;
+        width: 100%;
+        margin: 20px 0px 0px 0px;
+    }
+
+}*/
 
 /*# sourceMappingURL=styles.css.map */
